fix code pre-wrap

--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -6,9 +6,9 @@
 
     pre {
         overflow-x: auto;       // this sets the scrolling in x
-        white-space: pre-wrap;       // forces <code> to respect <pre> formatting
+        white-space: pre;       // forces <code> to respect <pre> formatting
         code {
-            white-space: pre-wrap;       // forces <code> to respect <pre> formatting
+            white-space: pre;       // forces <code> to respect <pre> formatting
         }
     }
 
